Add support for non-square heightmap import/export and various related improvements/bugfixes

* Support for non-square heightmap files (.r8, .r16)
* New heightmap import/export dialog
* Fixed issue where imported heightmap is "transposed"
* Fixed issue where saving an r16 heightmap file as r8 or vice versa only changes the extension

BUG:381774
BUG:381830
BUG:381866

Differential Revision: https://phabricator.kde.org/D6460