libs/ui/kis_config.h
@@ -325,6 +325,9 @@ public:
     QString exportConfiguration(const QString &filterId, bool defaultValue = false) const;
     void setExportConfiguration(const QString &filterId, KisPropertiesConfigurationSP properties) const;
 
+    QString importConfiguration(const QString &filterId, bool defaultValue = false) const;
+    void setImportConfiguration(const QString &filterId, KisPropertiesConfigurationSP properties) const;
+
     bool useOcio(bool defaultValue = false) const;
     void setUseOcio(bool useOCIO) const;
 
