plugins/impex/heightmap/kis_wdg_options_heightmap.h
@@ -1,5 +1,4 @@
 /*
- *  Copyright (c) 2014 Boudewijn Rempt <boud@valdyas.org>
  *  Copyright (c) 2017 Victor Wåhlström <victor.wahlstrom@initiali.se>
  *
  *  This library is free software; you can redistribute it and/or modify
@@ -18,21 +17,36 @@
  * Boston, MA 02110-1301, USA.
  */
 
-#ifndef _KIS_HeightMap_IMPORT_H_
-#define _KIS_HeightMap_IMPORT_H_
+#ifndef _KIS_WDG_OPTIONS_HEIGHTMAP_H_
+#define _KIS_WDG_OPTIONS_HEIGHTMAP_H_
 
-#include <QVariant>
+#include <kis_config_widget.h>
+#include "ui_kis_wdg_options_heightmap.h"
 
-#include <KisImportExportFilter.h>
-
-class KisHeightMapImport : public KisImportExportFilter
+class KisWdgOptionsHeightmap : public KisConfigWidget, public Ui::WdgOptionsHeightMap
 {
     Q_OBJECT
+
 public:
-    KisHeightMapImport(QObject *parent, const QVariantList &);
-    ~KisHeightMapImport() override;
-public:
-    KisImportExportFilter::ConversionStatus convert(KisDocument *document, QIODevice *io,  KisPropertiesConfigurationSP configuration = 0) override;
+    explicit KisWdgOptionsHeightmap(QWidget *parent);
+    explicit KisWdgOptionsHeightmap(QWidget *parent, bool export_mode);
+
+Q_SIGNALS:
+    void statusUpdated(bool status);
+
+protected:
+    void showEvent(QShowEvent *event) override;
+    void setConfiguration(const KisPropertiesConfigurationSP  cfg) override;
+    KisPropertiesConfigurationSP configuration() const override;
+
+private Q_SLOTS:
+    void guessDimensions();
+    void widthChanged(int i);
+    void heightChanged(int i);
+
+private:
+    void updateStatus();
+    bool m_exportMode;
 };
 
-#endif
+#endif // _KIS_WDG_OPTIONS_HEIGHTMAP_H_
